--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "employee-crud-local",
   "version": "0.1.0",
   "private": true,
+   "engines": {
+    "node": "8.11.4"
+  },
   "dependencies": {
     "react": "^16.10.0",
     "react-dom": "^16.10.0",
@@ -11,7 +14,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "heroku-postbuild": "npm run build"
   },
   "eslintConfig": {
     "extends": "react-app"
